Dev env (#2)
* recipes update

* removing existing knowledge chunks of document re-upload

* dev env

* dev env

* inverted bootstrap order

* updated ignores

* updated openapi

* readme and license

* environment variables

* test data
